--- a/Lessons1-5Code/code_lessons2_5/code_lessons2_5/code_lessons2_5.vcxproj
+++ b/Lessons1-5Code/code_lessons2_5/code_lessons2_5/code_lessons2_5.vcxproj
@@ -127,6 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="lesson3.cpp" />
     <ClCompile Include="lessons_headers.cpp" />
     <ClCompile Include="lesson2.cpp" />
     <ClCompile Include="lesson2.2.cpp" />
