--- a/Lessons1-5Code/code_lessons2_5/code_lessons2_5/code_lessons2_5.vcxproj.filters
+++ b/Lessons1-5Code/code_lessons2_5/code_lessons2_5/code_lessons2_5.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="lesson2.2.cpp">
       <Filter>Arquivos de Origem</Filter>
     </ClCompile>
+    <ClCompile Include="lesson3.cpp">
+      <Filter>Arquivos de Origem</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="lessons_headers.h">
